# rust-sharex-server

./: Cargo.toml  Rocket.toml
src/: main.rs
static/: dollardom.js  style.css
templates/: index.hbs
