[package]
name = "rocket-sharex"
version = "0.1.0"
authors = ["Paul <paul@niobium.me>"]

[dependencies]
rocket = "0.2.4"
rocket_codegen = "0.2.4"
multipart = "0.11.0"
rand = "0.3.15"
mime_guess = "1.8.1"
glob = "0.2.11"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]